<resources>
    <string name="app_name">Hostel</string>
    <string name="congratulations__string">Congratulations</string>
    <string name="you_have_successfully_added_a_property_in_your_portfolio__string">You have successfully added a property in your portfolio.</string>
    <string name="title_activity_properties">PropertiesActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="edittext_hint"><font size="15">SEARCH PROPERTY</font></string>
    <string name="search_tenant"><font size="15">SEARCH TENANT</font></string>
    <string name="add_search_your_tenants"><![CDATA[ADD & SEARCH YOUR TENANTS]]></string>
    <string name="check_room_vacancies">CHECK ROOM VACANCIES</string>
    <string name="clear_your_doubts">CLEAR YOUR DOUBT</string>
    <string name="check_your_booking_s_status">CHECK YOUR BOOKING’S STATUS</string>
    <string name="report_your_complaints">REPORT YOUR COMPLAINTS</string>
    <string name="track_your_expenses">TRACK YOUR EXPENSES</string>
    <string name="title_activity_select_property">SelectPropertyActivity</string>
    <string name="asign_the_room_and_resources_to_your_tenant">Asign the room and resources to your tenant.</string>
    <string name="assign">Assign the room and resources to your tenant.</string>
    <string name="verify_number_desc">We\'ve sent verification code to <b>9836859382</b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="manage">Manage</string>
    <string name="dashboard">Dashboard</string>
    <string name="property">Property</string>
    <string name="transaction">Transaction</string>
    <string name="profile">Profile</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="edit_bed_number_price"><![CDATA[Edit Bed Number & Price]]></string>
</resources>