<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/dashboard" />

    <item
        android:id="@+id/manageFragment"
        android:icon="@drawable/bn_manage_icon"
        android:title="@string/manage" />

    <item
        android:id="@+id/propertyFragment"
        android:icon="@drawable/bn_prop_icon"
        android:title="@string/property" />

    <item
        android:id="@+id/transactionFragment"
        android:icon="@drawable/bn_tran_icon"
        android:title="@string/transaction" />

    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/bn_prof_icon"
        android:title="@string/profile" />

</menu>